--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "json-server": "^0.14.2"
   },
   "scripts": {
     "start": "json-server --watch src/ws/nflx.json --port 3000 & react-scripts start",
